karl package Changelog
======================

3.132 (2014-8-22)
-----------------

- Fix a Unicode issue when reindexing

3.131 (2014-08-22)
------------------

- Removed the tags portlet. (LP #1357406)

- Reinstated the extracted text cache used by the text index for file data.
  Made the extracted text Persistent so it won't be loaded in RAM during normal
  operation.  The extracted text is also limited to 256kb in size and stored
  using gzip compression to minimize impact on database size. (LP #1340295)

- The global site tag cloud and each community's tag cloud are now precomputed
  to improve performance. (LP #1302128)

3.130 (2014-08-07)
------------------

- Fixed broken pagination introduced in last release. (LP #1353626)

- Convert X-Karl-Location header from Unicode to string. (LP #792334)

3.129 (2014-08-04)
------------------

- Changed the implementation of ``karl.content.views.files.download_zipped`` to
  use a temporary file instead of RAM to construct the zip file.  (LP #1349275)

- Performance enhancements to catalog batching and image drawer search.
  (LP #1351871)

3.128 (2014-07-22)
------------------

- Fixed a bug where we were trying to date localize a non-date value in the
  trash folder view. (LP #1340381)

3.127 (2014-07-11)
------------------

- Another unicode header fix for mimetype on preview (LP #1340391)

- Remove expensive, recursive calculation of 'total_size' in Files tool folder
  views.  (LP #1314685)

3.126 (2014-07-08)
------------------

- Fix dates in network events view by using a date format the globalization
  Javascript can parse. (LP #1337430)

- Fix another issue where Unicode headers may be sent. I don't know why some
  files have a 'mimetype' attribute with a unicode value. (LP #1338707)

- Added a missing renderer declaration to the people grid json view zcml 
  configuration. (LP #1338784)

3.125 (2014-07-06)
------------------

- Fix an issue where Unicode headers will be sent. See