@@ -1,6 +1,11 @@
 karl package Changelog
 ======================
 
+Unreleased
+----------
+
+- Redirect /profiles to the people directory if there is one. (LP #1364966)
+
 3.132 (2014-8-22)
 -----------------
 
